# OpenCoral

./: CMakeLists.txt  README.md
coral_gpu/: CMakeLists.txt
coral_gpu/include/: coral_cuda_wrapper.h  cuda_matrix.h  cuda_memory.h  cuda_optimiser.h  cuda_types.h
coral_gpu/src/: cuda_memory.cpp  cuda_optimiser.cu
coral_gpu/tests/: coral_gpu_tests.cpp
examples/: CMakeLists.txt  coral_affine_example.cpp  coral_cpu_example.cpp  coral_direct_mvo.cpp  coral_gpu_example.cpp
open_coral/: CMakeLists.txt
open_coral/include/: coral.h  model_initialiser.h
open_coral/include/extractors/: coral_curvature_extractor.h
open_coral/include/features/: coral_feature.h  coral_feature_curvature.h  coral_feature_point.h  coral_feature_stereo_correspondance.h  coral_feature_stereo_correspondence.h
open_coral/include/models/: coral_affine_model.h  coral_dummy_model.h  coral_model_line.h  coral_photo_model.h  coral_pnp_model.h
open_coral/include/viewer/: coral_viewer.h
open_coral/src/: coral_affine_model.cpp  coral_curvature_extractor.cpp  coral_feature_curvature.cpp  coral_feature_point.cpp  coral_feature_stereo_correspondance.cpp  coral_feature_stereo_correspondence.cpp  coral_model.cpp  coral_model_line.cpp  coral_photo_model.cpp  coral_pnp_model.cpp
open_coral/tests/: coral_line_tests.cpp  coral_photo_tests.cpp  coral_pnp_tests.cpp  coral_stereo_tests.cpp  coral_tests.cpp
